--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next": "^8.0.3",
     "node-sass": "^4.9.3",
     "react": "^16.8.3",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.8.3",
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
