--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-id-swiper": "^1.6.9",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1"
   },
