--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.6.0",
     "react-id-swiper": "^1.6.9",
     "react-scroll-parallax": "^2.1.2",
     "react-slick": "^0.23.2",
