--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^9.0.6",
     "node-sass": "^4.9.3",
     "react": "^16.9.0",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
     "react-ga": "^2.6.0",
     "react-id-swiper": "^1.6.9",
