--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.1.0",
     "less": "^3.9.0",
     "next": "^9.0.6",
+    "next-seo": "^2.1.0",
     "node-sass": "^4.9.3",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
